--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>APLAYZ-APP</title>
     <link rel="stylesheet" href="./src/styles/reset.css">
+    <link rel="stylesheet" href="./src/styles/_variables.css">
+    <link rel="stylesheet" href="./src/styles/index.css">
 </head>
 <body>
-    <h1>Hello Worldddsss!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
+    <header class="header_wrap"></header>
+    <main>
+
+    </main>
+    <footer></footer>
 </body>
 </html>
